--- a/module-admin/src/main/resources/static/css/dashboard.css
+++ b/module-admin/src/main/resources/static/css/dashboard.css
@@ -422,7 +422,7 @@
 
 .adoption-summary-chart {
     height: 292px;
-    background-color: #f5f5f7;
+    /*background-color: #f5f5f7;*/
     margin: 40px 0;
     display: flex;
     align-items: center;
