--- a/module-admin/src/main/resources/templates/common/index.html
+++ b/module-admin/src/main/resources/templates/common/index.html
@@ -18,17 +18,6 @@
 
     <script type="text/javascript" th:src="@{/files/bower_components/chart.js/dist/Chart.js}"></script>
     <script th:inline="javascript">
-        const dashboard = {
-
-            // 새로운식구, 일상기록 새로고침
-            reload: () => {
-
-            }
-
-
-        }
-
-
         $(function () {
             getDashboardData({periodType : 'daily'});
 
@@ -49,6 +38,12 @@
                 , type: 'get'
             }).done(function(result) {
                 $('#dashboardArea').html(result);
+            }).fail(function(result) {
+                if(result.status === 0) {
+                    alert("알 수 없는 에러가 발생하였습니다.");
+                } else{
+                    alert('데이터 조회에 실패하였습니다.');
+                }
             })
         }
     </script>
